--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=proyectoIntegrador1.2
 spring.h2.console.enabled=true
-spring.datasource.DriverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:clinicaOdontologicaDos
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.url=jdbc:mysql://db-springclinica.cobgwk6mi0el.us-east-1.rds.amazonaws.com:3306/clinica_springboot
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
